# design-gym

./: .gitignore  README.md
.cursor/rules/: paperbench-workflow.mdc
context/: knowhow.md  paperbench_guide.md
context/eval_examples/question_1/: answer.txt  data_cgm.csv  data_meta.csv  hypertension_metabolites_results.csv  question 1.ipynb  requirements.txt  rubric.txt
context/eval_examples/question_2/: answer.txt  question 2.ipynb  rubric.txt
context/eval_examples/question_3/: answer.txt  question 3.ipynb  rubric.txt
context/eval_examples/question_4/: answer.txt  data_metabolomics.csv  question 4.ipynb  rubric.txt
context/eval_examples/question_5/: answer.txt  data_lipids.csv  question 5.ipynb  rubric.txt
tasks/: .env.example  README.md  agent.py  pyproject.toml  tamarind_client.py
tasks/ph_sensitive_design/: .gitignore  README.md  answer.txt  question.ipynb  question.md  requirements.txt  rubric.txt  rubric_HD.txt
