[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tamarind-client"
version = "0.1.0"
description = "Python client for the Tamarind Bio API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
tamarind = "tamarind_client:main"

[tool.setuptools]
py-modules = ["tamarind_client"]

